feat: begin P4 participant experience
